# cursor-test

./: .gitignore  AGENTS.md  README.md  README_配置说明.md  math-teaching-assistant.mdc  pouch.json  project.registry.json  pyproject.toml  requirements.txt  低头找幸福_本地查看版.md  俞正强_人物蒸馏_系统提示规则.md  俞正强_低头找幸福_蒸馏.md  四年级+整合与拓展_RAG优化.md  图片审查.md  王永春一本通_cleaned.md  种子课2——如何教对数学课_cleaned.md  要求.md
RAG工具包/: RAG_数据清洗完整操作指南.md  clean_docx_v3.py  数据清洗方法手册_复盘经验.md  示例配置_新书处理模板.py  给AI的提示词_处理新书.md
claude终端代码/: _config.py  add_image_descriptions.py  analyze_boundaries.py  analyze_font_sizes.py  apply_corrections.py  apply_human_descriptions.py  bilibili_batch.py  bilibili_subtitle.py  clean_dixia_xingfu.py  clean_docx.py  clean_docx_v2.py  clean_ocr_formulas.py  clean_新课标.py  convert_log.txt  corrections.json  debug_alt.py  describe_wangyongchun.py  docx_to_md.py  download_all_pages.py  download_direct.py  download_subtitles.py  download_with_punctuation.py  download_xiaoshudiandian.py  export_all_images.py  export_lowres_for_review.py  find_missing.py  fix_alt_text.py  fix_md_headings.py  fix_rag.py  match_and_replace_images.py  match_lessons.py  parse_ppt.py  process_images.py  rag_postprocess.py  review_compare.py  search_bilibili.py  search_bilibili_html.py  search_curl.py  season_list.json  second_pass_dixia_xingfu.py  (+8 more)
claude终端代码/__pycache__/: descriptions.json  flagged_report.md
claude终端代码/新课标_cleaned/: 新课标数学课例式解读（小学）_cleaned.md
tests/: __init__.py  test_rag_postprocess.py
种子课1图片有一些丢失的对比tex中，但是影响不大/: 种子课_headed.md
种子课3_待查图片描述有没有问题/: 种子课3.0——对话深度学习_cleaned.md
(+9 files in other folders)
